# crypto-bot

./: .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  REQUISITOS.md  SETUP_MILESTONES.md  WORKFLOW_SETUP_COMPLETE.md  bandit-report.json  coverage.json  docker-compose.yml  env.config.example  env.example  pyproject.toml  requirements-dev.txt  requirements.txt  test_plugin_validation.py
.cursor/: CONTEXT7_SETUP.md  context7-libraries.json  mcp.json  syntax-reference.md
.cursor/kb/: index.json
.cursor/kb/entries/: mypy-missing-return-annotation.md  ruff-f401-unused-import.md
.cursor/rules/: agentic_workflow.mdc  code_quality.mdc  context7_integration.mdc  development_workflow.mdc  event_sourcing.mdc  git_workflow.mdc  github_templates.mdc  knowledge_base.mdc  taskmaster_priority.mdc
.cursor/rules/taskmaster/: dev_workflow.mdc  taskmaster.mdc
.cursor/templates/: kb_entry.md
.github/: CODEOWNERS  MILESTONES_SETUP.md  labels.yml  pull_request_template.md  workflow-config.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  security_vulnerability.md  task_implementation.md
.github/workflows/: ci.yml
.taskmaster/: README.md  config.json  workflow-integration.json
.taskmaster/docs/: prd.txt
.taskmaster/tasks/: tasks.json
.taskmaster/templates/: tasks.json.template
alembic/: env.py
alembic/versions/: 0dc9187cad72_add_balance_snapshot_and_market_data_.py  811f2e9e8b61_add_domain_event_table_for_event_.py  90f93590835d_initial_schema_with_all_models.py
config/: README.md
config/environments/: base.yaml  development.yaml  production.yaml  staging.yaml
docs/: API_DOCUMENTATION.md  CODING_STANDARDS.md  CONFIGURATION_GUIDE.md  DEVELOPMENT_WORKFLOW.md  DOCUMENTATION_WORKFLOW.md  FRESH_SETUP_VALIDATION_REPORT.md  ONBOARDING_GUIDE.md  PLUGIN_DEVELOPMENT_GUIDE.md  RUFF_FORMAT_EVALUATION.md  SECURITY_PRACTICES.md  TASK_23_CLI_VALIDATION_REPORT.md  TASK_23_COMPLETION_SUMMARY.md  TASK_23_FINAL_CERTIFICATION_REPORT.md  TASK_23_STATUS_REPORT.md  TESTING_SETUP.md  WORKFLOW_DETALHADO.md  WORKFLOW_DIAGRAMA.md  WORKFLOW_ENFORCEMENT.md  WORKFLOW_QUICK_START.md  técnico_debt_linter_migration.md
docs/architecture/: agent_framework_comparison.md  agent_helper_scripts.md  agentic_architecture_analysis.md  agentic_feasibility_report.md  agentic_mcp_integration.md  agentic_migration_risk.md  agentic_roadmap.md  cursor_rules_revalidation.md  mcp_candidate_analysis.md  strategy_plugins.md
docs/qa/: BUG_REPORTS.md  BUG_REPORT_TEMPLATE.md  README.md
docs/security/: HARDENING_GUIDE.md  KEY_ROTATION_PLAYBOOK.md  SECURITY_BASELINE.md
scripts/: README.md  dev-workflow.py  install-hooks.sh  setup-context7.py  setup-dev-workflow.py  setup-git-hooks.py  setup_milestones.py  taskmaster-integration.py  validate-syntax.py  validate-workflow.py  validate_coinbase_api.py  workflow.sh
src/crypto_bot/: __main__.py
src/crypto_bot/application/: exceptions.py
src/crypto_bot/application/dtos/: __init__.py  order.py
src/crypto_bot/application/interfaces/: __init__.py  trading_engine.py  trading_service.py
src/crypto_bot/application/services/: __init__.py  event_service.py  risk_action_handler.py  risk_monitor.py  risk_service.py  snapshot_service.py  strategy_orchestrator.py  trading_service.py
src/crypto_bot/cli/: context.py  main.py
src/crypto_bot/config/: __init__.py  loader.py  schemas.py  settings.py
src/crypto_bot/domain/: exceptions.py
src/crypto_bot/domain/protocols/: __init__.py
src/crypto_bot/domain/repositories/: __init__.py  asset_repository.py  base.py  event_repository.py  exchange_repository.py  order_repository.py  position_repository.py  strategy_repository.py  trade_repository.py  trading_pair_repository.py
src/crypto_bot/domain/value_objects/: __init__.py  percentage.py  price.py  quantity.py  timeframe.py
src/crypto_bot/plugins/: __init__.py  registry.py
src/crypto_bot/utils/: __init__.py  logger.py  rate_limiter.py  structured_logger.py  system_events.py
tests/: conftest.py  test_basic.py
tests/cli/: CLI_ISSUES_REPORT.md  FIXES_REQUIRED.md  cli_test_report.md  test_cli_commands.py
tests/e2e/: test_error_scenarios_and_recovery.py  test_full_trading_flows.py
tests/integration/: test_database_connection.py  test_database_models.py  test_database_persistence_and_plugin_loading.py  test_encrypted_models.py  test_repositories.py
tests/integration/application/: test_risk_edge_cases.py  test_risk_integration.py  test_strategy_orchestrator.py
tests/integration/infrastructure/: test_settings_loader.py
tests/integration/plugins/: __init__.py  test_exchange_plugin_integration.py  test_exchange_plugins_basic.py  test_exchange_testnet.py
tests/manual_qa/: README.md  __init__.py  conftest.py
tests/manual_qa/cli/: __init__.py  test_cli_commands_example.py
tests/manual_qa/config/: __init__.py
tests/manual_qa/exchange/: __init__.py
tests/manual_qa/exploratory/: __init__.py
tests/manual_qa/fixtures/: __init__.py
tests/manual_qa/risk/: __init__.py
tests/manual_qa/security/: __init__.py
tests/manual_qa/strategy/: __init__.py
tests/unit/: test_encryption.py  test_value_objects.py
tests/unit/application/: test_dtos.py  test_event_service.py  test_risk_action_handler.py  test_risk_monitor.py  test_risk_service.py  test_snapshot_service.py  test_strategy_orchestrator.py  test_trading_service.py
tests/unit/config/: __init__.py  test_loader.py  test_schemas.py
tests/unit/infrastructure/: test_balance_snapshot_repository.py  test_encryption_rotation.py  test_market_data_repository.py  test_risk_config.py
tests/unit/plugins/: __init__.py  test_exchange_config_models.py  test_indicator_base.py  test_indicator_cache.py  test_pandas_ta_indicators.py  test_plugin_registry.py  test_strategy_loader.py  test_strategy_macd_crossover.py  test_strategy_rsi_mean_reversion.py
tests/unit/utils/: test_log_rotation.py  test_logger_enhanced_redaction.py  test_logger_redaction.py  test_rate_limiter.py  test_structured_logger.py  test_system_events.py  test_yaml_logging_config.py
(+51 files in other folders)
